# SeetaFaceEngine

FaceDetection/: CMakeLists.txt
FaceDetection/include/: common.h
FaceDetection/include/util/: math_func.h
FaceDetection/src/feat/: surf_feature_map.cpp
FaceDetection/src/test/: facedetection_test.cpp
